--- a/themes/custom/assets/css/main.css
+++ b/themes/custom/assets/css/main.css
@@ -9574,6 +9574,7 @@ br {
 .contact__info h3 {
     margin-bottom: 0;
     font-size: 16px;
+    padding-top: 50px;
     font-weight: 300;
     line-height: 2;
     color: #333;
