--- a/themes/custom/layouts/partials/contact.html
+++ b/themes/custom/layouts/partials/contact.html
@@ -4,7 +4,7 @@
         <div class="contact">
             <h2>{{ .Site.Data.homepage.contact.title }}</h2>
             <div class="row pt-2">
-                <div class="col-12 col-lg-7">
+                <!-- <div class="col-12 col-lg-7">
                     <form action="{{ .Site.Data.homepage.contact.form.action }}" method="{{ .Site.Data.homepage.contact.form.method }}">
                         <div class="row">
                             <div class="col-12 col-sm-6">
@@ -31,6 +31,14 @@
                             </div>
                         </div>
                     </form>
+                </div> -->
+                <!-- <div class="col-12 col-lg-5 contact__info">
+                    <h3>{{ .Site.Data.homepage.contact.phone.title }}</h3>
+                    <span>{{ .Site.Data.homepage.contact.phone.number }}</span>
+                    <h3>{{ .Site.Data.homepage.contact.email.title }}</h3>
+                    <span>{{ .Site.Data.homepage.contact.email.email | safeHTML }}</span>
+                    <h3>{{ .Site.Data.homepage.contact.address.title }}</h3>
+                    <span>{{ .Site.Data.homepage.contact.address.address | safeHTML }}</span>
                 </div>
                 <div class="col-12 col-lg-5 contact__info">
                     <h3>{{ .Site.Data.homepage.contact.phone.title }}</h3>
@@ -39,7 +47,15 @@
                     <span>{{ .Site.Data.homepage.contact.email.email | safeHTML }}</span>
                     <h3>{{ .Site.Data.homepage.contact.address.title }}</h3>
                     <span>{{ .Site.Data.homepage.contact.address.address | safeHTML }}</span>
+                </div> -->
+
+                
+                {{ range .Site.Data.homepage.contact.items }}
+                <div class="col-6 col-lg-6 contact__info">
+                    <h3>{{ .title }}</h3>
+                    <span><a href="{{.link}}">{{ .text }}</a></span>
                 </div>
+                {{ end }}
             </div>
         </div>
     </div>
